--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,20 @@
   left: 600px;
   width: 200px;
   height: 50px;
- 
-  
+}
 
+#mute {
+  position: absolute;
+  top: 60px;
+  left: 165px;
+  width: 22px;
+}
+
+#audio {
+  position: absolute;
+  top: 60px;
+  left: 165px;
+  width: 20px;
 }
 
 
