--- a/css/main.css
+++ b/css/main.css
@@ -10,16 +10,21 @@
 
 #mute {
   position: absolute;
-  top: 60px;
-  left: 165px;
+  top: 150px;
+  left: 108px;
   width: 22px;
 }
 
 #audio {
   position: absolute;
-  top: 60px;
-  left: 165px;
+  top: 150px;
+  left: 108px;
   width: 20px;
+}
+
+@font-face {
+  font-family: Ancient;
+  src: url('../src/fonts/ancient.ttf');
 }
 
 
@@ -27,6 +32,3 @@
 html, body {
   overflow: hidden;
 }
-/* (viewPort.offset[0] + this.player.mapPos[0]), (viewPort.offset[1] + this.player.mapPos[1]), 
-
-this.player.size[0], this.player.size[1]) */
