--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,12 @@
   src: url('../src/fonts/ancient.ttf');
 }
 
+#playAgain {
+  position: absolute;
+  top: 150px;
+  left: 300px;
+  width: 100px;
+}
 
 
 html, body {
