--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,64 @@
+.overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.34);
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.intro {
+  background-image: url(../src/images/castle.png);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.enemyInfoBox {
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.653);
+  height: 508px;
+  width: 523px;
+  margin-top: 2%;
+  margin-left: 10px;
+}
+
+.enemyInfoBox li {
+  display: flex;
+  margin-left: -27px;
+}
+
+.enemyInfoBox ul {
+  list-style: none;
+}
+
+.enemyInfoBox p {
+  color: white;
+}
+
+.enemyInfoBox img {
+  width: 27%;
+  align-self: center;
+}
+
+#ghost, #skull, #greenMonster {
+  width: 15%;
+  margin-right: 15px;
+}
+
+#ogre {
+  margin-left: -16px;
+}
+
+#demon {
+  margin-left: -13px;
+}
+
 #play {
   background-image: url('../src/images/stone.jpg');
   font-size: 20px;
@@ -6,6 +67,7 @@
   left: 600px;
   width: 200px;
   height: 50px;
+  z-index: 99;
 }
 
 #mute {
@@ -34,7 +96,7 @@
   width: 100px;
 }
 
-
 html, body {
   overflow: hidden;
+  margin: 0px;
 }
