--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
   width: 100%;
   z-index: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .intro {
@@ -17,6 +18,44 @@
   position: absolute;
 }
 
+.gameBackgroundInfo {
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.653);
+  height: fit-content;
+  width: 343px;
+  padding: 26px;
+  text-align: center;
+  align-self: center;
+}
+
+.playInstructions {
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.653);
+  height: 314px;
+  width: 523px;
+  margin-top: 2%;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.playInstructions p {
+  color: white;
+}
+
+.playInstructions li {
+  margin-top: 5px;
+  color: white;
+}
+
+.gameBackgroundInfo P {
+  color: white;
+  font-size: 153%;
+}
+
 .enemyInfoBox {
   display: flex;
   flex-direction: column;
@@ -26,6 +65,7 @@
   width: 523px;
   margin-top: 2%;
   margin-left: 10px;
+  padding-right: 3px;
 }
 
 .enemyInfoBox li {
@@ -64,23 +104,25 @@
   font-size: 20px;
   color: white;
   position: absolute;
-  left: 600px;
+  right: 174px;
+  top: 487px;
   width: 200px;
   height: 50px;
   z-index: 99;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #mute {
   position: absolute;
   top: 190px;
-  left: 108px;
+  left: 101px;
   width: 22px;
 }
 
 #audio {
   position: absolute;
   top: 190px;
-  left: 108px;
+  left: 101px;
   width: 20px;
 }
 
@@ -91,9 +133,14 @@
 
 #playAgain {
   position: absolute;
-  top: 150px;
-  left: 300px;
-  width: 100px;
+  top: 50%;
+  left: 50%;
+  width: 157px;
+  height: 75px;
+  background-image: url('../src/images/stone.jpg');
+  font-size: 20px;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 html, body {
